k8s/apps/external-dns-coredns/network-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-dns-coredns-egress
  namespace: external-dns-coredns
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 2379
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns-etcd
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-coredns
      app.kubernetes.io/name: external-dns
  policyTypes:
    - Egress
